<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/gutter"
        android:paddingTop="24dp"
        android:paddingRight="@dimen/gutter"
        android:paddingBottom="28dp">

        <TextView
            style="@style/Text.AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/home_date"
            style="@style/Text.Meta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp" />

        <LinearLayout
            android:id="@+id/daily_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_daily_press"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pill_accent"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/daily_title"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/daily_title"
                style="@style/Text.DailyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:ellipsize="end"
                android:maxLines="2" />

            <TextView
                android:id="@+id/daily_meta"
                style="@style/Text.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/daily_text"
                style="@style/Text.DailyPoem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="4" />

            <TextView
                android:id="@+id/daily_hint"
                style="@style/Text.Meta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/label_pinyin_hint" />
        </LinearLayout>

        <TextView
            android:id="@+id/home_total"
            style="@style/Text.Meta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="3dp"
                android:layout_height="14dp"
                android:background="@drawable/bg_bar" />

            <TextView
                style="@style/Text.Section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/daily_pick" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_picks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>
